test/Sema/objcmembers_attr_requires_module.code
// RUN: %target-language-frontend -typecheck -verify -enable-objc-interop %s
// RUN: %target-language-frontend -typecheck -verify -enable-objc-interop %s -parse-as-library

@objcMembers class Oof {
  // expected-error@-1 {{@objcMembers attribute used without importing module 'Foundation'}}
}
